[package]
name = "rcon-shell"
version = "0.1.0"
authors = ["Nick Farley <nick-1154@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcon = "0.2.0"
futures = "0.3.4"
rustyline = "6.0.0"
structopt = "0.3.12"
directories = "2.0.2"
