[package]
name = "rcon-shell"
version = "0.1.0"
authors = ["Nick Farley <nick-1154@hotmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcon = { path = "./rust-rcon" }
tokio = { version = "0.2", features = ["rt-core"] }
rustyline = "6.0.0"
rpassword = "4.0.2"
structopt = "0.3.12"
directories = "2.0.2"
