[package]
name = "rcon-shell"
version = "0.1.1"
authors = ["Nick Farley <nick-1154@hotmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "CLI to administer commands to Source or Minecraft servers"
repository = "https://github.com/ironhaven/rcon-shell"
keywords = ["remote-shell"]
categories = ["command-line-utilities"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcon = "0.2.1"
tokio = { version = "0.2", features = ["rt-core"] }
rustyline = "6.0.0"
rpassword = "4.0.2"
structopt = "0.3.12"
directories = "2.0.2"
